--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
   mysql:
     image: mysql:5.7
     restart: always
+    command: --character-set-server=utf8 --collation-server=utf8_general_ci
     environment:
       MYSQL_ROOT_PASSWORD: huya123456
       MYSQL_DATABASE: huya
